# mozilla-kwallet

./: BUILD  CMakeLists.txt  Changelog  KDEWallet.cpp  KDEWallet.h  Makefile  README  kde-wallet_password_integration-0.1a.xpi  kde-wallet_password_integration-0.3.xpi  kde-wallet_password_integration-0.4.xpi  kde-wallet_password_integration-0.6.xpi
old/: kde-wallet_password_integration-0.2.xpi  kde-wallet_password_integration-0.3.xpi  kde-wallet_password_integration-0.4.xpi  kde-wallet_password_integration-0.5.xpi
src/: .directory  BUILD  CMakeLists.txt  Changelog  HOW_TO_DEBUG  KDEWallet.cpp  KDEWallet.h  LICENSE  Makefile  Xul_1.cpp  Xul_2.cpp  kde-wallet_password_integration-0.6.xpi  xul_1.mak  xul_2.mak
xpi/: chrome.manifest  install.rdf
xpi/chrome/content/: about.xul  ff-overlay.js  ff-overlay.xul  options.xul  overlay.js
xpi/chrome/locale/de-DE/: about.dtd  options.dtd
xpi/chrome/locale/en-US/: options.dtd  overlay.dtd  overlay.properties
xpi/chrome/locale/es-ES/: about.dtd  options.dtd  overlay.properties
xpi/chrome/locale/fr-FR/: about.dtd  options.dtd  overlay.properties
xpi/chrome/locale/pt-BR/: options.dtd  overlay.properties
xpi/chrome/skin/: overlay.css
xpi/defaults/preferences/: prefs.js
