project(firefox-kde-wallet)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/modules)
find_package(KDE4 REQUIRED)
find_package(Qt4 REQUIRED)
include(${QT_USE_FILE})
find_package(PkgConfig)
pkg_check_modules(XUL libxul)
include_directories($KDE4_INCLUDES} ${QT_INCLUDE_DIR} ${XUL_INCLUDE_DIRS})
link_directories(${QT_LIBRARY_DIR} ${XUL_LIBRARY_DIRS})
set(CMAKE_CXX_FLAGS "")
add_definitions(${QT_DEFINITIONS} ${KDE4_DEFINITIONS} ${XUL_CFLAGS} "-DMOZ_NO_MOZALLOC -fno-rtti -fno-exceptions -fPIC -std=c++0x")
add_library(kdewallet MODULE KDEWallet.cpp)
target_link_libraries(kdewallet ${QT_CORE_LIBRARIES} ${KDE4_KDEUI_LIBS} ${XUL_LIBRARIES})
install(TARGETS kdewallet DESTINATION components PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)