project(firefox-kde-wallet)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/modules)
find_package(KDE4 REQUIRED)
find_package(Qt4 REQUIRED)
include(${QT_USE_FILE})
find_package(PkgConfig)
pkg_check_modules(MOZPLUGIN mozilla-plugin)
message(STATUS "Found xul: ${XUL_LIBRARY}")
include_directories($KDE4_INCLUDES} ${QT_INCLUDE_DIR} ${MOZPLUGIN_INCLUDE_DIRS})
link_directories(${QT_LIBRARY_DIR} "/usr/lib/firefox-devel/lib")
set(CMAKE_CXX_FLAGS "")
add_definitions(${QT_DEFINITIONS} ${KDE4_DEFINITIONS} "-DMOZ_NO_MOZALLOC -fno-rtti -fno-exceptions -fPIC -std=c++0x")
add_library(kdewallet MODULE KDEWallet.cpp)
target_link_libraries(kdewallet ${QT_CORE_LIBRARIES} ${KDE4_KDEUI_LIBS} "-lxpcomglue_s -lxul -lxpcom -lmozalloc -lnspr4")
install(TARGETS kdewallet DESTINATION components PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)